--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -19,7 +19,6 @@
    <body>
       <!-- Top Bar Start -->
       <!-- Top Bar Start -->
-
       <!-- Top Bar End -->
       <div class="page-wrapper">
          <!-- Page Content-->
@@ -29,56 +28,58 @@
                </div>
                <div class="col-6">
                   {% if messages %}
-                      {% for message in messages %}
-                      {% if message.tags == "success" %}
-                          <div class="alert alert-secondary border-0" role="alert">
-                          {{ message }}
-                          </div>
-                      {% endif %}
-                      {% if message.tags == "error" %}
-                          <div class="alert alert-info alert-dismissible fade show" role="alert">
-                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                             <span aria-hidden="true"><i class="mdi mdi-close"></i></span>
-                             </button>
-                             {{ message }}
-                          </div>
-                      {% endif %}
+                  {% for message in messages %}
+                  {% if message.tags == "success" %}
+                  <div class="alert alert-secondary border-0" role="alert">
+                     {{ message }}
+                  </div>
+                  {% endif %}
+                  {% if message.tags == "error" %}
+                  <div class="alert alert-info alert-dismissible fade show" role="alert">
+                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                     <span aria-hidden="true"><i class="mdi mdi-close"></i></span>
+                     </button>
+                     {{ message }}
+                  </div>
+                  {% endif %}
                   {% endfor %}
                   {% endif %}
                </div>
-
             </div>
             </br>
-<!-- Page Content-->
+            <!-- Page Content-->
             <div class="page-content">
-
-                <div class="container-fluid">
-                    <!-- Page-Title -->
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="page-title-box">
-
-                                <center><h4 class="page-title">URL cutter</h4></center>
-                            </div><!--end page-title-box-->
-                        </div><!--end col-->
-                    </div><!--end row-->
-                    <!-- end page title end breadcrumb -->
-                    <div class="row" style="text-align: center">
-                         <div class="col-md-6 offset-md-3">
-                            <div class="card">
-                                <div class="card-body">
-
-            {% block content %}
-
-            {% endblock %}
-
-
-                                </div><!--end card-body-->
-                            </div><!--end card-->
-                        </div> <!--end col-->
-                    </div><!--end row-->
-
-                </div><!-- container -->
+               <div class="container-fluid">
+                  <!-- Page-Title -->
+                  <div class="row">
+                     <div class="col-sm-12">
+                        <div class="page-title-box">
+                           <center>
+                              <h4 class="page-title">URL cutter</h4>
+                           </center>
+                        </div>
+                        <!--end page-title-box-->
+                     </div>
+                     <!--end col-->
+                  </div>
+                  <!--end row-->
+                  <!-- end page title end breadcrumb -->
+                  <div class="row" style="text-align: center">
+                     <div class="col-md-6 offset-md-3">
+                        <div class="card">
+                           <div class="card-body">
+                              {% block content %}
+                              {% endblock %}
+                           </div>
+                           <!--end card-body-->
+                        </div>
+                        <!--end card-->
+                     </div>
+                     <!--end col-->
+                  </div>
+                  <!--end row-->
+               </div>
+               <!-- container -->
             </div>
             <!-- end page content -->
          </div>
