--- a/mainapp/templates/homepage.html
+++ b/mainapp/templates/homepage.html
@@ -2,21 +2,19 @@
 {% load static %}
 
 {% block content %}
-                                    <div class="form-group">
-                                            <div class="input-group">
-                                                <form method="post" class="col-12">{% csrf_token %}
-                                                <div class="input-group">
-                                                    {{ form.target_url }}
-                                                <span class="input-group-append">
-                                                    <input class="btn btn-primary" type="submit" value="Cut!"></input>
-                                                </span>
-                                            </div>
-                                                </form>
 
-                                            </div>
-                                        </div>
-
-
+<div class="form-group">
+   <div class="input-group">
+      <form method="post" class="col-12">
+         {% csrf_token %}
+         <div class="input-group">
+            {{ form.target_url }}
+            <span class="input-group-append">
+            <input class="btn btn-primary" type="submit" value="Cut!"></input>
+            </span>
+         </div>
+      </form>
+   </div>
+</div>
 
 {% endblock %}
-
