Templated details changed

--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -67,7 +67,7 @@
                   <div class="row" style="text-align: center">
                      <div class="col-md-6 offset-md-3">
                         <div class="card">
-                           <div class="card-body">
+                           <div class="card-body"><br>
                               {% block content %}
                               {% endblock %}
                            </div>
@@ -86,7 +86,7 @@
          <!-- end page content -->
          <footer class="footer text-center text-sm-left">
             <div class="boxed-footer">
-               &copy; 2020 UrlCutter
+               &copy; 2020 UrlCutter - Mateusz Dzierzęcki
             </div>
          </footer>
          <!--end footer-->
