url regex validator

--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -94,6 +94,8 @@
       <!-- end page-wrapper -->
       <!-- jQuery  -->
       <script src="{% static '/assets/js/jquery.min.js' %}"></script>
+      <script src="{% static '/assets/js/bootstrap.bundle.min.js' %}"></script>
+      <script src="{% static '/assets/js/metisMenu.min.js' %}"></script>
       <script src="{% static '/assets/js/waves.min.js' %}"></script>
       <script src="{% static '/assets/js/jquery.slimscroll.min.js' %}"></script>
       <script src="{% static '/assets/plugins/dropify/js/dropify.min.js' %}"></script>
