--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -55,7 +55,7 @@
                      <div class="col-sm-12">
                         <div class="page-title-box">
                            <center>
-                              <a href="/"><h4 class="page-title">URL cutter</h4></a>
+                              <a href="/"><h4 class="page-title">URL CUTTER</h4></a>
                            </center>
                         </div>
                         <!--end page-title-box-->
